# karver

./: .gitignore  .travis.yml  README.md  karver.cabal  stack.yaml  stencil.cabal
src/Text/: Karver.hs  Stencil.hs
src/Text/Karver/: Compiler.hs  Parse.hs  PrettyPrinter.hs  ResolveIncludes.hs  Types.hs
src/Text/Stencil/: Compiler.hs  Config.hs  Context.hs  ErrorHandler.hs  Helper.hs  Parse.hs  PrettyPrinter.hs  ResolveIncludes.hs  Types.hs
stencil/: Main.hs
test/: DocTest.hs  Main.hs
test/Text/: KarverSpec.hs  StencilSpec.hs
test/Text/Stencil/: TypesSpec.hs
test/golden/: comment.jinja  comment.jinja.golden  conditional_on_object.jinja  conditional_on_object.jinja.golden  context.json  loop_variables.jinja  loop_variables.jinja.golden  nested_comment.jinja  raw.jinja.golden  simple.jinja  simple.jinja.golden
test/json/: test-data.json
