name:             karver
version:          0.2.0
cabal-version:    >= 1.8
build-type:       Simple
license:          BSD3
license-file:     LICENSE
copyright:        (c) 2013 Jeremy Hull
author:           Jeremy Hull <sourdrums@gmail.com>
maintainer:       Jeremy Hull <sourdrums@gmail.com>
bug-reports:      https://github.com/sourrust/karver/issues
stability:        experimental
category:         Text
tested-with:      GHC >= 7.6.3 && < 7.9
synopsis:         A simple template engine, inspired by jinja2
description:      Karver is heavily inspired by the python project jinja2,
                  at least syntactic wise. This template engine strives to
                  be simple and fast, leveraging libraries like attoparsec
                  and data types like Text.

source-repository head
  type:           git
  location:       git://github.com/ibotty/karver.git

library
  ghc-options:    -Wall
                  -fno-warn-unused-do-bind
  hs-source-dirs: src
  exposed-modules: Text.Karver
                   Text.Karver.Compiler
                   Text.Karver.ResolveIncludes
                   Text.Karver.Parse
                   Text.Karver.PrettyPrinter
                   Text.Karver.Types
  build-depends:    base >= 4 && < 5
                  , attoparsec >= 0.10 && < 0.13
                  , directory >=1.1 && < 1.3
                  , filepath >=1 && <1.4
                  , transformers >=0.4 && <0.5
                  , text >= 0.11 && < 1.2
                  , unordered-containers >= 0.2 && < 0.3
                  , vector >= 0.10 && < 0.11
                  , bytestring >= 0.10 && < 0.12
                  , aeson >= 0.6 && < 0.8

test-suite spec
  type:           exitcode-stdio-1.0
  ghc-options:    -Wall -Werror
  hs-source-dirs: test
  main-is:          Spec.hs
  build-depends:    base , karver
                  , text
                  , aeson
                  , unordered-containers
                  , attoparsec
                  , vector
                  , hspec >= 1.5 && <= 1.10
