name:             stencil
version:          0.0.1
cabal-version:    >= 1.8
build-type:       Simple
license:          BSD3
license-file:     LICENSE
copyright:        (c) 2013 Jeremy Hull, 2014 Tobias Florek
author:           Jeremy Hull <sourdrums@gmail.com>, Tobias Florek <tob@butter.sh>
maintainer:       Tobias Florek <tob@butter.sh>
bug-reports:      https://github.com/ibotty/stencil/issues
stability:        experimental
category:         Text
tested-with:      GHC >= 7.6.3 && < 7.9
synopsis:         A simple template engine, inspired by jinja2
description:      Stencil is heavily inspired by the python project jinja2,
                  at least syntactic wise. This template engine strives to
                  be simple and fast, leveraging libraries like attoparsec
                  and data types like Text.

source-repository head
  type:           git
  location:       git://github.com/ibotty/stencil.git

flag newTransformers
  default: True
  description: Use new transformers instead of transformers-compat
  manual: False

library
  ghc-options:    -Wall
  hs-source-dirs: src
  exposed-modules: Text.Stencil
                   Text.Stencil.Config
                   Text.Stencil.Compiler
                   Text.Stencil.Helper
                   Text.Stencil.ResolveIncludes
                   Text.Stencil.Parse
                   Text.Stencil.PrettyPrinter
                   Text.Stencil.Types
  build-depends:    base >= 4.6 && < 4.8
                  , attoparsec >= 0.10 && < 0.13
                  , containers >=0.1 && <0.6
                  , directory >=1.1 && < 1.3
                  , filepath >=1 && <1.4
                  , text >= 0.11 && < 1.2
                  , unordered-containers >= 0.2 && < 0.3
                  , vector >= 0.10 && < 0.11
                  , bytestring >= 0.10 && < 0.12
                  , aeson >= 0.6 && < 0.8
  if flag(newTransformers)
    build-depends:
                    transformers >=0.4 && <0.5
  else
    build-depends:
                    transformers >=0.3 && <0.4
                  , transformers-compat >=0.3 && <0.4

test-suite tasty
  type:           exitcode-stdio-1.0
  ghc-options:    -Wall -Werror
  hs-source-dirs: test
  main-is:          Main.hs
  build-depends:    base
                  , bytestring
                  , stencil
                  , text
                  , directory
                  , aeson
                  , tasty ==0.8.*
                  , tasty-golden ==2.2.*

test-suite spec
  type:           exitcode-stdio-1.0
  ghc-options:    -Wall -Werror
  hs-source-dirs: test
  main-is:          Spec.hs
  build-depends:    base
                  , stencil
                  , text
                  , aeson
                  , unordered-containers
                  , attoparsec
                  , vector
                  , hspec >= 1.5 && <= 1.11

test-suite doctest
  type:           exitcode-stdio-1.0
  ghc-options:    -Wall -Werror
  hs-source-dirs: test
  main-is:          DocTest.hs
  build-depends:    base
                  , Glob >=0.6 && <0.8
                  , doctest >=0.9.9 && <0.10

